--- a/libraries/libapparmor/README
+++ b/libraries/libapparmor/README
@@ -1,3 +1,3 @@
-What little documentation exists is in src/aalogparse.h.
+What little documentation exists is in include/aalogparse.h.
 
 Please file bugs using https://bugs.launchpad.net/apparmor/+filebug
