--- a/parser/po/sv.po
+++ b/parser/po/sv.po
@@ -6,14 +6,14 @@ msgstr ""
 "Project-Id-Version: apparmor-parser\n"
 "Report-Msgid-Bugs-To: <apparmor@lists.ubuntu.com>\n"
 "POT-Creation-Date: 2014-09-13 00:11-0700\n"
-"PO-Revision-Date: 2019-06-15 06:20+0000\n"
+"PO-Revision-Date: 2019-06-26 17:08+0000\n"
 "Last-Translator: Jonatan Nyberg <Unknown>\n"
 "Language-Team: Novell Language <language@novell.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2019-06-16 05:29+0000\n"
-"X-Generator: Launchpad (build 18981)\n"
+"X-Launchpad-Export-Date: 2019-06-27 04:33+0000\n"
+"X-Generator: Launchpad (build 18991)\n"
 "Language: sv\n"
 
 #: ../parser_include.c:113 ../parser_include.c:111
@@ -786,4 +786,4 @@ msgstr "unix-regel: ogiltig villkorlig grupp %s=()"
 #: ../parser_regex.c:368
 #, c-format
 msgid "%s: Regex error: trailing '\\' escape character\n"
-msgstr ""
+msgstr "%s: Regex-fel: efterföljande \"\\\" escape-tecken\n"
