--- a/utils/po/de.po
+++ b/utils/po/de.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: apparmor-utils\n"
 "Report-Msgid-Bugs-To: <apparmor@lists.ubuntu.com>\n"
 "POT-Creation-Date: 2014-09-14 19:29+0530\n"
-"PO-Revision-Date: 2019-04-17 23:42+0000\n"
-"Last-Translator: Tobias Bannert <tobannert@gmail.com>\n"
+"PO-Revision-Date: 2019-09-19 16:47+0000\n"
+"Last-Translator: Stephan Woidowski <swoidowski@t-online.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2019-04-19 05:30+0000\n"
-"X-Generator: Launchpad (build 18928)\n"
+"X-Launchpad-Export-Date: 2019-09-20 05:49+0000\n"
+"X-Generator: Launchpad (build 19048)\n"
 "Language: de\n"
 
 #: ../aa-genprof:56
@@ -1163,23 +1163,23 @@ msgstr "(H)ilfe"
 
 #: ../apparmor/ui.py:260
 msgid "(V)iew Profile"
-msgstr ""
+msgstr "(P)rofil ansehen"
 
 #: ../apparmor/ui.py:261
 msgid "(U)se Profile"
-msgstr ""
+msgstr "(B)enutze Profil"
 
 #: ../apparmor/ui.py:262
 msgid "(C)reate New Profile"
-msgstr ""
+msgstr "(E)rstelle Neues Profil"
 
 #: ../apparmor/ui.py:263
 msgid "(U)pdate Profile"
-msgstr ""
+msgstr "(A)ktualisiere Profil"
 
 #: ../apparmor/ui.py:264
 msgid "(I)gnore Update"
-msgstr ""
+msgstr "(I)gnoriere Aktualisierung"
 
 #: ../apparmor/ui.py:266
 msgid "Save Selec(t)ed Profile"
@@ -1187,11 +1187,11 @@ msgstr "Ausgewähl(t)es Profil speichern"
 
 #: ../apparmor/ui.py:267
 msgid "(U)pload Changes"
-msgstr ""
+msgstr "Änderungen (h)ochladen"
 
 #: ../apparmor/ui.py:268
 msgid "(V)iew Changes"
-msgstr ""
+msgstr "Änderungen an(z)eigen"
 
 #: ../apparmor/ui.py:269
 msgid "View Changes b/w (C)lean profiles"
