--- a/utils/po/de.po
+++ b/utils/po/de.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: apparmor-utils\n"
 "Report-Msgid-Bugs-To: <apparmor@lists.ubuntu.com>\n"
 "POT-Creation-Date: 2014-09-14 19:29+0530\n"
-"PO-Revision-Date: 2019-09-19 16:47+0000\n"
+"PO-Revision-Date: 2019-10-09 15:41+0000\n"
 "Last-Translator: Stephan Woidowski <swoidowski@t-online.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2019-09-20 05:49+0000\n"
-"X-Generator: Launchpad (build 19048)\n"
+"X-Launchpad-Export-Date: 2019-10-10 04:34+0000\n"
+"X-Generator: Launchpad (build af2eefe214bd95389a09b7c956720881bab16807)\n"
 "Language: de\n"
 
 #: ../aa-genprof:56
@@ -1067,7 +1067,7 @@ msgstr "(P)rofil"
 
 #: ../apparmor/ui.py:236
 msgid "(P)rofile Clean Exec"
-msgstr ""
+msgstr "Ausführen der (P)rofilbereinigung"
 
 #: ../apparmor/ui.py:237
 msgid "(C)hild"
@@ -1075,11 +1075,11 @@ msgstr "(K)ind"
 
 #: ../apparmor/ui.py:238
 msgid "(C)hild Clean Exec"
-msgstr ""
+msgstr "Ausführen der (C)hild-Bereinigung"
 
 #: ../apparmor/ui.py:239
 msgid "(N)amed"
-msgstr ""
+msgstr "(B)enannt"
 
 #: ../apparmor/ui.py:240
 msgid "(N)amed Clean Exec"
