--- a/utils/po/sv.po
+++ b/utils/po/sv.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: apparmor\n"
 "Report-Msgid-Bugs-To: AppArmor list <apparmor@lists.ubuntu.com>\n"
 "POT-Creation-Date: 2014-09-14 19:29+0530\n"
-"PO-Revision-Date: 2019-06-26 17:20+0000\n"
+"PO-Revision-Date: 2019-11-01 09:51+0000\n"
 "Last-Translator: Jonatan Nyberg <Unknown>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2019-06-27 04:33+0000\n"
-"X-Generator: Launchpad (build 18991)\n"
+"X-Launchpad-Export-Date: 2019-11-02 05:45+0000\n"
+"X-Generator: Launchpad (build 469f241f4e73cc0bdffa4e30654052a2af068e06)\n"
 "Language: sv\n"
 
 #: ../aa-genprof:56
@@ -600,7 +600,7 @@ msgstr "Klaglägeändringar:"
 
 #: ../apparmor/aa.py:1525
 msgid "Enforce-mode changes:"
-msgstr ""
+msgstr "Tvinga-läge ändringar:"
 
 #: ../apparmor/aa.py:1528
 #, python-format
@@ -955,6 +955,8 @@ msgid ""
 "Please pass an application to generate a profile for, not a profile itself - "
 "skipping %s."
 msgstr ""
+"Vänligen skicka ett program för att generera en profil för, inte profilen "
+"själv - hoppar över %s."
 
 #: ../apparmor/tools.py:220
 #, python-format
