--- a/utils/po/de.po
+++ b/utils/po/de.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: apparmor-utils\n"
 "Report-Msgid-Bugs-To: <apparmor@lists.ubuntu.com>\n"
 "POT-Creation-Date: 2014-09-14 19:29+0530\n"
-"PO-Revision-Date: 2019-10-11 20:09+0000\n"
-"Last-Translator: Christian Boltz <Unknown>\n"
+"PO-Revision-Date: 2019-11-29 19:33+0000\n"
+"Last-Translator: Stephan Woidowski <swoidowski@t-online.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2019-10-12 05:53+0000\n"
-"X-Generator: Launchpad (build af2eefe214bd95389a09b7c956720881bab16807)\n"
+"X-Launchpad-Export-Date: 2019-11-30 04:32+0000\n"
+"X-Generator: Launchpad (build c597c3229eb023b1e626162d5947141bf7befb13)\n"
 "Language: de\n"
 
 #: ../aa-genprof:56
@@ -1119,11 +1119,11 @@ msgstr ""
 
 #: ../apparmor/ui.py:249
 msgid "(X) ix On"
-msgstr ""
+msgstr "(X) ix An"
 
 #: ../apparmor/ui.py:250
 msgid "(X) ix Off"
-msgstr ""
+msgstr "(X) ix Aus"
 
 #: ../apparmor/ui.py:251 ../apparmor/ui.py:265
 msgid "(S)ave Changes"
@@ -1131,7 +1131,7 @@ msgstr "Änderungen (s)peichern"
 
 #: ../apparmor/ui.py:252
 msgid "(C)ontinue Profiling"
-msgstr ""
+msgstr "Profiling fortsetzen"
 
 #: ../apparmor/ui.py:253
 msgid "(N)ew"
@@ -1215,7 +1215,7 @@ msgstr "(N)icht mehr fragen"
 
 #: ../apparmor/ui.py:274
 msgid "Ask Me (L)ater"
-msgstr ""
+msgstr "Später nachfragen"
 
 #: ../apparmor/ui.py:277
 msgid "Allow All (N)etwork"
@@ -1227,15 +1227,15 @@ msgstr ""
 
 #: ../apparmor/ui.py:279
 msgid "(O)verwrite Profile"
-msgstr ""
+msgstr "Profil (ü)berschreiben"
 
 #: ../apparmor/ui.py:280
 msgid "(K)eep Profile"
-msgstr ""
+msgstr "Profil (b)ehalten"
 
 #: ../apparmor/ui.py:281
 msgid "(C)ontinue"
-msgstr ""
+msgstr "(F)ortsetzen"
 
 #: ../apparmor/ui.py:282
 msgid "(I)gnore"
