--- a/utils/po/de.po
+++ b/utils/po/de.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: apparmor-utils\n"
 "Report-Msgid-Bugs-To: <apparmor@lists.ubuntu.com>\n"
 "POT-Creation-Date: 2014-09-14 19:29+0530\n"
-"PO-Revision-Date: 2019-11-29 19:33+0000\n"
+"PO-Revision-Date: 2019-12-02 17:12+0000\n"
 "Last-Translator: Stephan Woidowski <swoidowski@t-online.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2019-11-30 04:32+0000\n"
+"X-Launchpad-Export-Date: 2019-12-03 05:47+0000\n"
 "X-Generator: Launchpad (build c597c3229eb023b1e626162d5947141bf7befb13)\n"
 "Language: de\n"
 
@@ -1075,7 +1075,7 @@ msgstr "(K)ind"
 
 #: ../apparmor/ui.py:238
 msgid "(C)hild Clean Exec"
-msgstr ""
+msgstr "(C)hild sauber ausführen"
 
 #: ../apparmor/ui.py:239
 msgid "(N)amed"
@@ -1083,15 +1083,15 @@ msgstr "(B)enannt"
 
 #: ../apparmor/ui.py:240
 msgid "(N)amed Clean Exec"
-msgstr ""
+msgstr "(B)enannte sauber ausführen"
 
 #: ../apparmor/ui.py:241
 msgid "(U)nconfined"
-msgstr ""
+msgstr "(U)ndefiniert"
 
 #: ../apparmor/ui.py:242
 msgid "(U)nconfined Clean Exec"
-msgstr ""
+msgstr "(U)ndefinierte sauber ausführen"
 
 #: ../apparmor/ui.py:243
 msgid "(P)rofile Inherit"
@@ -1099,7 +1099,7 @@ msgstr "(P)rofil erben"
 
 #: ../apparmor/ui.py:244
 msgid "(P)rofile Inherit Clean Exec"
-msgstr ""
+msgstr "(P)rofil vererbt saubere Ausführung"
 
 #: ../apparmor/ui.py:245
 msgid "(C)hild Inherit"
@@ -1107,15 +1107,15 @@ msgstr "(K)ind erben"
 
 #: ../apparmor/ui.py:246
 msgid "(C)hild Inherit Clean Exec"
-msgstr ""
+msgstr "(C)hild vererbt saubere Ausführung"
 
 #: ../apparmor/ui.py:247
 msgid "(N)amed Inherit"
-msgstr ""
+msgstr "(B)enannte Vererbung"
 
 #: ../apparmor/ui.py:248
 msgid "(N)amed Inherit Clean Exec"
-msgstr ""
+msgstr "(B)enannte Vererbung sauber ausführen"
 
 #: ../apparmor/ui.py:249
 msgid "(X) ix On"
