--- a/utils/po/de.po
+++ b/utils/po/de.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: apparmor-utils\n"
 "Report-Msgid-Bugs-To: <apparmor@lists.ubuntu.com>\n"
 "POT-Creation-Date: 2014-09-14 19:29+0530\n"
-"PO-Revision-Date: 2019-12-02 17:12+0000\n"
+"PO-Revision-Date: 2019-12-15 17:28+0000\n"
 "Last-Translator: Stephan Woidowski <swoidowski@t-online.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2019-12-03 05:47+0000\n"
+"X-Launchpad-Export-Date: 2019-12-16 05:37+0000\n"
 "X-Generator: Launchpad (build c597c3229eb023b1e626162d5947141bf7befb13)\n"
 "Language: de\n"
 
@@ -1131,7 +1131,7 @@ msgstr "Änderungen (s)peichern"
 
 #: ../apparmor/ui.py:252
 msgid "(C)ontinue Profiling"
-msgstr "Profiling fortsetzen"
+msgstr "P(r)ofiling fortsetzen"
 
 #: ../apparmor/ui.py:253
 msgid "(N)ew"
@@ -1215,7 +1215,7 @@ msgstr "(N)icht mehr fragen"
 
 #: ../apparmor/ui.py:274
 msgid "Ask Me (L)ater"
-msgstr "Später nachfragen"
+msgstr "Später (n)achfragen"
 
 #: ../apparmor/ui.py:277
 msgid "Allow All (N)etwork"
