--- a/parser/apparmor.d.pod
+++ b/parser/apparmor.d.pod
@@ -1650,7 +1650,7 @@ negative values match when specifying one or the other. Eg, 'rw' matches when
 
 =head1 SEE ALSO
 
-apparmor(7), apparmor_parser(8), apprmor_xattrs(7), aa-complain(1),
+apparmor(7), apparmor_parser(8), apparmor_xattrs(7), aa-complain(1),
 aa-enforce(1), aa_change_hat(2), mod_apparmor(5), and
 L<https://wiki.apparmor.net>.
 
