Add "run" variable
Signed-off-by: nl6720 <nl6720@gmail.com>

--- a/parser/apparmor.d.pod
+++ b/parser/apparmor.d.pod
@@ -1308,6 +1308,7 @@ provided AppArmor policy:
   @{apparmorfs}
   @{sys}
   @{tid}
+  @{run}
   @{XDG_DESKTOP_DIR}
   @{XDG_DOWNLOAD_DIR}
   @{XDG_TEMPLATES_DIR}
