--- a/utils/po/de.po
+++ b/utils/po/de.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: apparmor-utils\n"
 "Report-Msgid-Bugs-To: <apparmor@lists.ubuntu.com>\n"
 "POT-Creation-Date: 2014-09-14 19:29+0530\n"
-"PO-Revision-Date: 2019-12-15 17:28+0000\n"
-"Last-Translator: Stephan Woidowski <swoidowski@t-online.de>\n"
+"PO-Revision-Date: 2020-02-18 12:16+0000\n"
+"Last-Translator: Christian Boltz <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2019-12-16 05:37+0000\n"
-"X-Generator: Launchpad (build c597c3229eb023b1e626162d5947141bf7befb13)\n"
+"X-Launchpad-Export-Date: 2020-02-19 05:42+0000\n"
+"X-Generator: Launchpad (build 19413b719a8df7423ab1390528edadce9e0e4aca)\n"
 "Language: de\n"
 
 #: ../aa-genprof:56
@@ -1087,11 +1087,11 @@ msgstr "(B)enannte sauber ausführen"
 
 #: ../apparmor/ui.py:241
 msgid "(U)nconfined"
-msgstr "(U)ndefiniert"
+msgstr "(U)nbeschränkt"
 
 #: ../apparmor/ui.py:242
 msgid "(U)nconfined Clean Exec"
-msgstr "(U)ndefinierte sauber ausführen"
+msgstr "(U)nbeschränkte sauber ausführen"
 
 #: ../apparmor/ui.py:243
 msgid "(P)rofile Inherit"
